feat: Enhance noise gate functionality with UI controls for hold and release settings The fast AGC profile was intentionally left at maxGain: 4 — it was already conservative. The real problem was slow and normal allowing +20dB of gain on heavily compressed signals where the entire dynamic    range was only 1-3dB. With a 6x maxGain cap (+15.6dB), the AGC can still level a -35dBFS compressed signal up to the -20dB target, but can't overshoot enough to invert dynamics.

--- a/popup.html
+++ b/popup.html
@@ -210,6 +210,20 @@
             </div>
             <input type="range" id="gateThreshold" min="-80" max="-20" value="-50" step="1">
           </div>
+          <div class="control-group">
+            <div class="control-header">
+              <label for="gateHold">Hold</label>
+              <span class="value" id="gateHoldValue">100 ms</span>
+            </div>
+            <input type="range" id="gateHold" min="0" max="500" value="100" step="10">
+          </div>
+          <div class="control-group">
+            <div class="control-header">
+              <label for="gateRelease">Release</label>
+              <span class="value" id="gateReleaseValue">200 ms</span>
+            </div>
+            <input type="range" id="gateRelease" min="50" max="1000" value="200" step="10">
+          </div>
         </div>
       </div>
 
