refactor: Update presets and UI for dynamic generation of preset buttons

--- a/popup.html
+++ b/popup.html
@@ -56,61 +56,9 @@
       </div>
     </div>
 
-    <!-- Presets -->
+    <!-- Presets (generated dynamically from popup.js presetUI) -->
     <div class="presets-section">
-      <div class="presets-grid">
-        <!-- Row 1: Lightest -->
-        <button class="preset-btn" data-preset="off">
-          <span class="preset-name">Off</span>
-          <span class="preset-desc">No processing</span>
-        </button>
-        <button class="preset-btn" data-preset="music">
-          <span class="preset-name">Music</span>
-          <span class="preset-desc">Preserve dynamics</span>
-        </button>
-        <button class="preset-btn" data-preset="lofi">
-          <span class="preset-name">Lo-Fi</span>
-          <span class="preset-desc">Warm & mellow</span>
-        </button>
-        <button class="preset-btn" data-preset="streamWatch">
-          <span class="preset-name">Stream Watch</span>
-          <span class="preset-desc">Twitch & YouTube</span>
-        </button>
-        <!-- Row 2: Moderate -->
-        <button class="preset-btn" data-preset="podcast">
-          <span class="preset-name">Podcast</span>
-          <span class="preset-desc">Voice clarity</span>
-        </button>
-        <button class="preset-btn preset-featured" data-preset="voiceFocus">
-          <span class="preset-name">Voice Focus</span>
-          <span class="preset-desc">Podcasts & streams</span>
-        </button>
-        <button class="preset-btn" data-preset="movie">
-          <span class="preset-name">Movie</span>
-          <span class="preset-desc">Action & dialog</span>
-        </button>
-        <button class="preset-btn" data-preset="bassTamer">
-          <span class="preset-name">Bass Tamer</span>
-          <span class="preset-desc">Reduce bass</span>
-        </button>
-        <!-- Row 3: Heaviest -->
-        <button class="preset-btn" data-preset="tv90s">
-          <span class="preset-name">90s TV</span>
-          <span class="preset-desc">Tap twice for TV+</span>
-        </button>
-        <button class="preset-btn preset-safety" data-preset="antiScream">
-          <span class="preset-name">Anti-Scream</span>
-          <span class="preset-desc">Crush all peaks</span>
-        </button>
-        <button class="preset-btn" data-preset="nightMode">
-          <span class="preset-name">Night Mode</span>
-          <span class="preset-desc">Quiet watching</span>
-        </button>
-        <button class="preset-btn" data-preset="sleep">
-          <span class="preset-name">Sleep</span>
-          <span class="preset-desc">Ultra-quiet</span>
-        </button>
-      </div>
+      <div class="presets-grid" id="presetsGrid"></div>
     </div>
 
     <!-- Simple Mode Controls -->
