Change transcriber from Whisper to Moonshine
Updated the transcriber label and note from 'Whisper' to 'Moonshine'.

--- a/popup.html
+++ b/popup.html
@@ -160,7 +160,7 @@
             </select>
           </div>
 
-          <!-- Video Transcriber (Whisper) -->
+          <!-- Video Transcriber (Moonshine) -->
           <div class="control-section-label transcriber-header">
             <span>Video Transcriber</span>
             <label class="toggle small">
@@ -170,7 +170,7 @@
             <span class="transcriber-label" id="transcriberLabel">Off</span>
           </div>
           <div class="control-note" id="transcriberNote">
-            Whisper AI — live captions from tab audio
+            Moonshine AI — live captions from tab audio
           </div>
           <div class="transcriber-output" id="transcriberOutput" style="display: none;">
             <div class="transcriber-text" id="transcriberText"></div>
